### Added

### Changed

### Fixed
 
## Snapcraft
- `snap install philosopher`