@@ -131,6 +131,10 @@ func appendParams(params met.MSFragger) *exec.Cmd {
 		fmt.Sprintf("%d", params.FragmentMassUnits),
 		"--calibrate_mass",
 		fmt.Sprintf("%d", params.CalibrateMass),
+		"--write_calibrated_mgf",
+		fmt.Sprintf("%d", params.WriteCalibratedMGF),
+		"--decoy_prefix",
+		fmt.Sprintf("%s", params.DecoyPrefix),
 		"--deisotope",
 		fmt.Sprintf("%d", params.Deisotope),
 		"--isotope_error",
